--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- ----------------------------CSS style sheet--------------------------- -->
+  <!------------------------------CSS style sheet----------------------------->
   <link rel="stylesheet" href="style.css">
 
-  <!-- -----------------------Google Font------------------------- -->
+  <!-------------------------Google Font--------------------------->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,16 +19,16 @@
 
 </head>
 <body>
-  <div role="Main-component" class="card">
-    <img role="QR code" src="images/image-qr-code.png" alt="qr-code">
+  <div role="main" class="card">
+    <img role="banner" src="images/image-qr-code.png" alt="qr-code">
 
-    <h3 role="Header">Improve your front-end skills by building projects</h3>
+    <h3 role="main">Improve your front-end skills by building projects</h3>
 
-    <p role="Content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
+    <p role="contentinfo">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
   
   </div>
   
-  <div role="Links" class="attribution">
+  <div role="directory" class="attribution">
     Challenge by <a role="Frontend-mentor-link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a role="Sadhana-profile" href="https://www.frontendmentor.io/profile/sadhana08">Sadhana</a>.
   </div>
