--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <h3 role="main">Improve your front-end skills by building projects</h3>
 
-    <p role="contentinfo"">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
+    <p role="contentinfo">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
   
   </div>
   
