--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- ----------------------------CSS style sheet--------------------------- -->
+  <!-- *******************************CSS style sheet****************************************** -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- -----------------------Google Font------------------------- -->
+  <!-- ********************************************Google Font*************************************** -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
