--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 </head>
 <body>
   <div role="main" class="card">
-    <img role="banner" src="images/image-qr-code.png" alt="qr-code">
+    <img role="img" src="images/image-qr-code.png" alt="qr-code">
 
-    <h3 role="main">Improve your front-end skills by building projects</h3>
+    <h3 role="heading">Improve your front-end skills by building projects</h3>
 
     <p role="contentinfo">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
   
   </div>
   
   <div role="link" class="attribution">
-    Challenge by <a role="link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a role="link" href="https://www.frontendmentor.io/profile/sadhana08">Sadhana</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/sadhana08">Sadhana</a>.
   </div>
 
 </body>
