--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 <body>
   <div role="main" class="card">
-    <img role="img" src="images/image-qr-code.png" alt="qr-code">
+    <img src="images/image-qr-code.png" alt="qr-code">
 
-    <h3 role="heading">Improve your front-end skills by building projects</h3>
+    <h3>Improve your front-end skills by building projects</h3>
 
-    <p role="contentinfo">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
   
   </div>
   
